--- a/templates/SenderListSettingsFormView.html
+++ b/templates/SenderListSettingsFormView.html
@@ -6,7 +6,7 @@
 		<div class="fieldset">
 			<div class="row">
 				<span class="label" data-bind="i18n: {'key': '%MODULENAME%/LABEL_SENDERS_COUNT'}"></span>
-				<input type="text" class="value input" data-bind="value: sendersCount" style="width: 35px;" />
+				<input type="text" class="value input" data-bind="value: numberOfSendersToDisplay" style="width: 35px;" />
 			</div>
 			<div class="row">
 				<span class="label" data-bind="i18n: {'key': '%MODULENAME%/LABEL_TIME_FRAME'}"></span>
