fixed issue with search in subfolders

--- a/templates/SearchView.html
+++ b/templates/SearchView.html
@@ -63,7 +63,7 @@
 					<div class="folders_search" data-bind="css: {'folders_search_expand': bAdvancedSearch}">
 						<span class="folders_search_label" data-bind="i18n: {'key': 'MAILWEBCLIENT/LABEL_SEARCH_IN'}"></span>
 						<span class="folders_search_select" data-bind="dropdown: {}, customTooltip: 'MAILWEBCLIENT/LABEL_SEARCH_IN'">
-							<span class="link control" data-bind="text: selectedSearchFoldersModeText"></span>
+							<span class="control" data-bind="text: selectedSearchFoldersModeText"></span>
 						</span>
 					</div>
 					<div style="flex-grow: 1;"></div>
