fixed BUG - Inbox is highlighted for a second

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -37,3 +37,12 @@
 .panels.settings .panel.navigation_panel .item.sender_list .icon:before {
 	content: "\e619";
 }
+
+.custom-mail-sender-selected {
+	.panel.left_panel .items_list .item.INBOX.selected > .title {
+		background: none;
+	}
+	.dropdown .dropdown_content .item.allread {
+		display: none;
+	}
+}
